--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing Three.js</title>
     <style>
-        body { margin: 0; }
+      body {
+        margin: 0;
+      }
     </style>
     <script type="module" src="main.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
