--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guilherme Esgario - 3D Resume</title>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script>
     <style>
       body {
         margin: 0;
       }
     </style>
+    <script type="module" src="js/main.js"></script>
   </head>
-  <body>
-    <script type="module" src="main.js"></script>
-  </body>
+  <body></body>
 </html>
