--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,39 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Guilherme Esgario - 3D Resume</title>
+        <title>Guilherme Esgario</title>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"
+        />
         <style>
             body {
                 margin: 0;
             }
+            #overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 24px;
+                color: white;
+                background-color: rgba(0, 0, 0, 0);
+                pointer-events: none;
+            }
         </style>
         <script type="module" src="js/main.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="overlay" class="bg-dark text-white">
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    </body>
 </html>
