--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,7 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"
         />
-        <style>
-            body {
-                margin: 0;
-            }
-            #overlay {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 24px;
-                color: white;
-                background-color: rgba(0, 0, 0, 0);
-                pointer-events: none;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style.css" />
         <script type="module" src="js/main.js"></script>
     </head>
     <body>
@@ -36,6 +18,15 @@
             <div class="spinner-border" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
+            <div id="form-container" class="container mt-5">
+                <!-- <form> -->
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="inputText" placeholder="Enter text">
+                    </div>
+                <!-- </form> -->
+            </div>
         </div>
+
+        
     </body>
 </html>
