--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,11 @@
             </div>
             <div id="form-container" class="container mt-5">
                 <!-- <form> -->
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputText" placeholder="Enter text">
-                    </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="inputText" placeholder="Enter text" />
+                </div>
                 <!-- </form> -->
             </div>
         </div>
-
-        
     </body>
 </html>
