--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,22 @@
         <title>Guilherme Esgario</title>
         <link
             rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/style.css" />
         <script type="module" src="js/main.js"></script>
     </head>
-    <body>
-        <div id="overlay" class="bg-dark text-white">
+    <body style="background-color: black">
+        <div id="overlay" class="text-white">
             <div class="spinner-border" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
-            <div id="form-container" class="container mt-5">
-                <!-- <form> -->
+            <div id="form-container" class="container mt-5 d-flex justify-content-center" style="visibility: hidden">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter text" />
+                    <input type="text" class="form-control" id="inputText" placeholder="Enter text" maxlength="512" />
                 </div>
-                <!-- </form> -->
             </div>
         </div>
     </body>
