--- a/src/index.html
+++ b/src/index.html
@@ -18,20 +18,27 @@
             <div class="spinner-border" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
-            <div id="form-container" class="container mt-5 d-flex justify-content-center" style="visibility: visible">
+            <div id="form-container" class="container mt-5 d-flex justify-content-center" style="visibility: hidden">
                 <div class="chooseLang">
                     <div>
-                        <span id="pt-lang" class="lang pt-lang" onclick="changeLang('português', this)"></span>
-                        <span id="en-lang" class="lang en-lang chosen" onclick="changeLang('english', this)"></span>
+                        <span id="pt-lang" class="lang pt-lang" onclick="changeLang('pt', this)"></span>
+                        <span id="en-lang" class="lang en-lang chosen" onclick="changeLang('en', this)"></span>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter text" maxlength="512" />
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="inputText"
+                        placeholder="Enter your question here"
+                        maxlength="512"
+                    />
                 </div>
             </div>
         </div>
 
+        <script src="main.js"></script>
         <script>
             function changeLang(language, el) {
                 var container = document.querySelector(".chooseLang").classList;
@@ -42,7 +49,6 @@
                         document.querySelector(".chooseLang .chosen").classList.remove("chosen");
                         el.add("chosen");
                         console.log(language + " chosen");
-                        // your code
                     }
                     return;
                 }
