--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <script>
+        <script type="text/javascript">
             function changeLang(language, el) {
                 var container = document.querySelector(".chooseLang").classList;
                 el = el.classList;
