--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
             <div id="form-container" class="container mt-5 d-flex justify-content-center" style="visibility: hidden">
                 <div class="chooseLang">
                     <div>
-                        <span id="pt-lang" class="lang pt-lang" onclick="changeLang('pt', this)"></span>
-                        <span id="en-lang" class="lang en-lang chosen" onclick="changeLang('en', this)"></span>
+                        <span id="pt-lang" class="lang pt-lang"></span>
+                        <span id="en-lang" class="lang en-lang chosen"></span>
                     </div>
                 </div>
 
@@ -37,22 +37,5 @@
                 </div>
             </div>
         </div>
-
-        <script type="text/javascript">
-            function changeLang(language, el) {
-                var container = document.querySelector(".chooseLang").classList;
-                el = el.classList;
-                if (container.contains("open")) {
-                    container.remove("open");
-                    if (!el.contains("chosen")) {
-                        document.querySelector(".chooseLang .chosen").classList.remove("chosen");
-                        el.add("chosen");
-                        console.log(language + " chosen");
-                    }
-                    return;
-                }
-                container.add("open");
-            }
-        </script>
     </body>
 </html>
