improve speech recognition

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                         </div>
 
                         <div class="speechDiv p-1">
-                            <button id="speechButton" class="btn btn-primary speechButton" type="button">
+                            <button id="speechButton" class="btn btn-secondary speechButton" type="button">
                                 <i id="speechIcon" class="bi bi-mic"></i>
                             </button>
                         </div>
