--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,16 @@
     </head>
     <body style="background-color: black">
         <div id="overlay" class="text-white">
-            <div style="margin-left: 14px">
-                <div class="spinner-border d-flex justify-content-center" style="position: absolute" role="status">
-                    <span class="sr-only">Loading...</span>
-                </div>
+            <div class="spinner-border" style="position: absolute" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
 
-                <div class="container mt-5 d-flex justify-content-center" style="visibility: visible">
+            <div style="margin-left: 50px">
+                <div
+                    id="form-container"
+                    class="container mt-5 d-flex justify-content-center"
+                    style="visibility: hidden"
+                >
                     <div class="row pt-5">
                         <div class="chooseLang p-1">
                             <div>
@@ -30,7 +34,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group p-1">
+                        <div class="form-group pt-1">
                             <input
                                 type="text"
                                 class="form-control"
