wip: start implementing suggestions panel

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,12 @@
                 <span class="sr-only">Loading...</span>
             </div>
 
-            <div style="margin-left: 50px">
+            <div id="sideMenu" class="suggestions-menu">
+                <div class="suggestions-menu-header">Suggestions</div>
+                <div class="suggestions-menu-body"></div>
+            </div>
+
+            <div class="topMenu mt-2">
                 <div
                     id="form-container"
                     class="container mt-5 d-flex justify-content-center"
