--- a/src/index.html
+++ b/src/index.html
@@ -20,42 +20,45 @@
                 <span class="sr-only">Loading...</span>
             </div>
 
-            <div id="sideMenu" class="suggestions-menu">
-                <div class="suggestions-menu-header">Suggestions</div>
-                <div class="suggestions-menu-body"></div>
-            </div>
+            <div id="content" style="visibility: hidden">
 
-            <div class="topMenu mt-2">
-                <div
-                    id="form-container"
-                    class="container mt-5 d-flex justify-content-center"
-                    style="visibility: hidden"
-                >
-                    <div class="row pt-5">
-                        <div class="chooseLang p-1">
-                            <div>
-                                <span id="pt-lang" class="lang pt-lang"></span>
-                                <span id="en-lang" class="lang en-lang chosen"></span>
+                <div id="sideMenu" class="suggestions-menu">
+                    <div class="suggestions-menu-header">Suggestions</div>
+                    <div class="suggestions-menu-body"></div>
+                </div>
+
+                <div class="topMenu mt-2">
+                    <div
+                        id="form-container"
+                        class="container mt-5 d-flex justify-content-center"
+                    >
+                        <div class="row pt-5">
+                            <div class="chooseLang p-1">
+                                <div>
+                                    <span id="pt-lang" class="lang pt-lang"></span>
+                                    <span id="en-lang" class="lang en-lang chosen"></span>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-group pt-1">
-                            <input
-                                type="text"
-                                class="form-control"
-                                id="inputText"
-                                placeholder="Enter your question here"
-                                maxlength="512"
-                            />
-                        </div>
+                            <div class="form-group pt-1">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="inputText"
+                                    placeholder="Enter your question here"
+                                    maxlength="512"
+                                />
+                            </div>
 
-                        <div class="speechDiv p-1">
-                            <button id="speechButton" class="btn btn-secondary speechButton" type="button">
-                                <i id="speechIcon" class="bi bi-mic"></i>
-                            </button>
+                            <div class="speechDiv p-1">
+                                <button id="speechButton" class="btn btn-secondary speechButton" type="button">
+                                    <i id="speechIcon" class="bi bi-mic"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </body>
