--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,13 @@
             </div>
 
             <div id="content" style="visibility: hidden">
-
                 <div id="sideMenu" class="suggestions-menu">
                     <div class="suggestions-menu-header">Suggestions</div>
                     <div class="suggestions-menu-body"></div>
                 </div>
 
                 <div class="topMenu mt-2">
-                    <div
-                        id="form-container"
-                        class="container mt-5 d-flex justify-content-center"
-                    >
+                    <div id="form-container" class="container mt-5 d-flex justify-content-center">
                         <div class="row pt-5">
                             <div class="chooseLang p-1">
                                 <div>
@@ -58,7 +54,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </body>
