--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="3D Resume">
+        <meta property="og:image" content="https://raw.githubusercontent.com/esgario/3d-resume/main/src/assets/images/thumbnail.png">
+        <meta property="og:url" content="https://esgario.github.io/3d-resume/">
+        <meta property="og:type" content="website">
         <title>Guilherme Esgario</title>
         <link
             rel="stylesheet"
